--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,18 +18,21 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.11.12"
-
+pytest = "^8.3.5"
+pytest-cov = "^6.1.1"
 
 [tool.ruff]
 line-length = 79
 extend-exclude = ["migrations"]
 
-
 [tool.ruff.lint]
 preview = true
 select = ['I', 'F', 'E', 'W', 'PL', 'PT']
 
-
 [tool.ruff.format]
 preview = true
 quote-style = 'single'
+
+[tool.pytest.ini_options]
+pythonpath = '.'
+addopts = '-p no:warnings'
