--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "sqlalchemy (>=2.0.41,<3.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "alembic (>=1.16.1,<2.0.0)",
-    "pwdlib[argon2] (>=0.2.1,<0.3.0)"
+    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "tzdata (>=2025.2,<2026.0)"
 ]
 
 
