--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 DATABASE_URL='postgres://user:password@localhost:5432/mydatabase'
+SECRET_KEY='abcde12345'
+ALGORITHM='HS256'
+ACCESS_TOKEN_EXPIRE_MINUTES=30
