--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ readme = "README.md"
 requires-python = ">=3.13,<4.0"
 dependencies = [
     "fastapi[standard] (>=0.115.12,<0.116.0)",
-    "sqlalchemy (>=2.0.41,<3.0.0)",
+    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "alembic (>=1.16.1,<2.0.0)",
     "pwdlib[argon2] (>=0.2.1,<0.3.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
-    "tzdata (>=2025.2,<2026.0)"
+    "tzdata (>=2025.2,<2026.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)"
 ]
 
 
@@ -27,6 +28,7 @@ ruff = "^0.11.12"
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
 taskipy = "^1.14.1"
+pytest-asyncio = "^1.0.0"
 
 [tool.ruff]
 line-length = 79
@@ -43,6 +45,7 @@ quote-style = 'single'
 [tool.pytest.ini_options]
 pythonpath = '.'
 addopts = '-p no:warnings'
+asyncio_default_fixture_loop_scope = 'function'
 
 [tool.taskipy.tasks]
 lint = 'ruff check'
@@ -55,3 +58,6 @@ run = 'fastapi dev todo_list_api/app.py'
 pre_test = 'task lint'
 test = 'pytest -s -x --cov=todo_list_api -vv'
 post_test = 'coverage html'
+
+[tool.coverage.run]
+concurrency = ['thread', 'greenlet']
